--- a/style.css
+++ b/style.css
@@ -1,3 +1,214 @@
-div {
-  color: red;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+body {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(0deg, #0f0c29 0%, #302b63 50%, #24243e 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 10px;
+  overflow: auto;
+  color: #1e1c3b;
+}
+
+button {
+  cursor: pointer;
+  background: #3e3b41;
+  color: white;
+  transition: background 0.3s;
+}
+
+button:hover {
+  background: #5d56c5;
+}
+
+button:active {
+  background: #373638;
+}
+
+.header {
+  background-color: #e7e7e7;
+  display: flex;
+  text-align: center;
+  font-size: 40px;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 10px;
+  padding: 8px;
+  margin-bottom: 8px;
+}
+
+h1 {
+  background-color: #e7e7e7;
+  font-style: italic;
+  font-family: monospace;
+  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+#rsa-creators {
+  border-radius: 20px;
+  box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.2);
+}
+
+.layout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #e7e7e7;
+  margin: 20px 0px 20px 0px;
+  padding: 25px;
+  border-radius: 5px;
+  width: 800px;
+  margin: 10px;
+  box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.2);
+}
+
+.key-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.key-display {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 30px;
+  padding-top: 10px;
+}
+
+.inputs {
+  display: flex;
+  gap: 10px;
+}
+
+.inputs label {
+  font-weight: bold;
+}
+
+.inputs-subclass {
+  display: flex;
+  flex-direction: column;
+}
+
+#text-input,
+#encryption-n,
+#encryption-e,
+#decryption-n,
+#decryption-d {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  resize: none;
+  width: 300px;
+  margin-bottom: 5px;
+}
+
+#output {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  resize: none;
+  width: 300px;
+  height: 120px;
+  margin-bottom: 5px;
+}
+
+#matrix-column-key,
+#matrix-column-key-decrypt {
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  resize: none;
+  height: auto;
+  width: 300px;
+  margin-bottom: 5px;
+}
+
+.key-text {
+  height: 50px;
+}
+
+.control-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#cipher-variant {
+  padding: 8px;
+  font-size: 16px;
+  color: #333;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.encrypt-button,
+.decrypt-button,
+#generate-keys,
+#process-button {
+  font-weight: bold;
+  padding: 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  max-width: 120px;
+}
+
+#example-button {
+  margin-top: 20px;
+  font-weight: bold;
+  padding: 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.toggle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#encrypt-decrypt-toggle {
+  padding: 8px;
+  font-size: 16px;
+  color: #333;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+p {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 16px;
 }
